tests/expectations/compiler/dyn_record/dyn_record_struct_field.out
Error [EPAR0370005]: expected 'record' -- found '='
    --> compiler-test:12:20
     |
  12 |         let d: dyn = t as dyn;
     |                    ^
